utilities/formula_conversion/src/grammar/TblCalcFieldParser.py
# Generated from TblCalcField.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TblCalcFieldParser ( Parser ):

    grammarFileName = "TblCalcField.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'SUM'", "'AVG'", "'MIN'", "'MAX'", "'COUNT'", 
                     "'ISDATE'", "'ZN'", "'IFNULL'", "'DATE'", "'REPLACE'", 
                     "'SPLIT'", "'PERCENTILE'", "'LOOKUP'", "'DIV'", "'DATEADD'", 
                     "'DATEDIFF'", "'DATENAME'", "'TODAY'", "'ABS'", "'ACOS'", 
                     "'ASIN'", "'ATAN'", "'ATAN2'", "'CEILING'", "'COS'", 
                     "'EXP'", "'FLOOR'", "'LN'", "'POWER'", "'ROUND'", "'SIGN'", 
                     "'SIN'", "'SQRT'", "'SQUARE'", "'TAN'", "'LEFT'", "'LEN'", 
                     "'COUNTD'", "'MEDIAN'", "'STDEV'", "'VAR'", "'RANK'", 
                     "'RUNNING_AVG'", "'RUNNING_COUNT'", "'RUNNING_MAX'", 
                     "'RUNNING_MIN'", "'RUNNING_SUM'", "'ISNULL'", "'LOG'", 
                     "'DAY'", "'MONTH'", "'NOW'", "'YEAR'", "'MID'", "'TRUE'", 
                     "'FALSE'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'^'", "','", 
                     "':'", "<INVALID>", "<INVALID>", "<INVALID>", "'AND'", 
                     "'OR'", "'IN'", "'IF'", "'THEN'", "'ELSE'", "'ELSEIF'", 
                     "'CASE'", "'WHEN'", "'END'", "'IIF'", "'FIXED'", "'INCLUDE'", 
                     "'EXCLUDE'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NUMBER", "STRING", "COMMENT", "LINE_COMMENT", 
                      "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", "RIGHT_BRACKET", 
                      "LEFT_SQ_BRACKET", "RIGHT_SQ_BRACKET", "CARET", "COMMA", 
                      "COLON", "LOGICAL_OPERATION", "AIRTHEMATIC_OPERATION", 
                      "NOT", "AND", "OR", "IN", "IF", "THEN", "ELSE", "ELSEIF", 
                      "CASE", "WHEN", "END", "IIF", "FIXED", "INCLUDE", 
                      "EXCLUDE", "DIGITS", "FIELD", "TBL_DATE", "WHITESPACE" ]

    RULE_calc_field = 0
    RULE_expr = 1
    RULE_case_expr = 2
    RULE_case_term = 3
    RULE_when_expr = 4
    RULE_if_expr = 5
    RULE_elseif_expr = 6
    RULE_else_expr = 7
    RULE_iif_expr = 8
    RULE_function_expr = 9
    RULE_function_name = 10
    RULE_lod_expr = 11
    RULE_lod_dim = 12
    RULE_lod_aggr = 13
    RULE_field_expr = 14
    RULE_field_literal = 15
    RULE_boolean_literal = 16
    RULE_numeric_literal = 17
    RULE_string_literal = 18
    RULE_date_literal = 19

    ruleNames =  [ "calc_field", "expr", "case_expr", "case_term", "when_expr", 
                   "if_expr", "elseif_expr", "else_expr", "iif_expr", "function_expr", 
                   "function_name", "lod_expr", "lod_dim", "lod_aggr", "field_expr", 
                   "field_literal", "boolean_literal", "numeric_literal", 
                   "string_literal", "date_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    NUMBER=57
    STRING=58
    COMMENT=59
    LINE_COMMENT=60
    LEFT_PAREN=61
    RIGHT_PAREN=62
    LEFT_BRACKET=63
    RIGHT_BRACKET=64
    LEFT_SQ_BRACKET=65
    RIGHT_SQ_BRACKET=66
    CARET=67
    COMMA=68
    COLON=69
    LOGICAL_OPERATION=70
    AIRTHEMATIC_OPERATION=71
    NOT=72
    AND=73
    OR=74
    IN=75
    IF=76
    THEN=77
    ELSE=78
    ELSEIF=79
    CASE=80
    WHEN=81
    END=82
    IIF=83
    FIXED=84
    INCLUDE=85
    EXCLUDE=86
    DIGITS=87
    FIELD=88
    TBL_DATE=89
    WHITESPACE=90

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Calc_fieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(TblCalcFieldParser.ExprContext,0)


        def EOF(self):
            return self.getToken(TblCalcFieldParser.EOF, 0)

        def getRuleIndex(self):
            return TblCalcFieldParser.RULE_calc_field

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCalc_field" ):
                return visitor.visitCalc_field(self)
            else:
                return visitor.visitChildren(self)




    def calc_field(self):

        localctx = TblCalcFieldParser.Calc_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_calc_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.expr(0)
            self.state = 41
            self.match(TblCalcFieldParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def date_literal(self):
            return self.getTypedRuleContext(TblCalcFieldParser.Date_literalContext,0)


        def LEFT_PAREN(self):
            return self.getToken(TblCalcFieldParser.LEFT_PAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TblCalcFieldParser.ExprContext)
            else:
                return self.getTypedRuleContext(TblCalcFieldParser.ExprContext,i)


        def RIGHT_PAREN(self):
            return self.getToken(TblCalcFieldParser.RIGHT_PAREN, 0)

        def NOT(self):
            return self.getToken(TblCalcFieldParser.NOT, 0)

        def case_expr(self):
            return self.getTypedRuleContext(TblCalcFieldParser.Case_exprContext,0)


        def if_expr(self):
            return self.getTypedRuleContext(TblCalcFieldParser.If_exprContext,0)


        def iif_expr(self):
            return self.getTypedRuleContext(TblCalcFieldParser.Iif_exprContext,0)


        def function_expr(self):
            return self.getTypedRuleContext(TblCalcFieldParser.Function_exprContext,0)


        def lod_expr(self):
            return self.getTypedRuleContext(TblCalcFieldParser.Lod_exprContext,0)


        def field_expr(self):
            return self.getTypedRuleContext(TblCalcFieldParser.Field_exprContext,0)


        def boolean_literal(self):
            return self.getTypedRuleContext(TblCalcFieldParser.Boolean_literalContext,0)


        def numeric_literal(self):
            return self.getTypedRuleContext(TblCalcFieldParser.Numeric_literalContext,0)


        def string_literal(self):
            return self.getTypedRuleContext(TblCalcFieldParser.String_literalContext,0)


        def CARET(self):
            return self.getToken(TblCalcFieldParser.CARET, 0)

        def AIRTHEMATIC_OPERATION(self):
            return self.getToken(TblCalcFieldParser.AIRTHEMATIC_OPERATION, 0)

        def LOGICAL_OPERATION(self):
            return self.getToken(TblCalcFieldParser.LOGICAL_OPERATION, 0)

        def AND(self):
            return self.getToken(TblCalcFieldParser.AND, 0)

        def OR(self):
            return self.getToken(TblCalcFieldParser.OR, 0)

        def IN(self):
            return self.getToken(TblCalcFieldParser.IN, 0)

        def getRuleIndex(self):
            return TblCalcFieldParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TblCalcFieldParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [89]:
                self.state = 44
                self.date_literal()
                pass
            elif token in [61]:
                self.state = 45
                self.match(TblCalcFieldParser.LEFT_PAREN)
                self.state = 46
                self.expr(0)
                self.state = 47
                self.match(TblCalcFieldParser.RIGHT_PAREN)
                pass
            elif token in [72]:
                self.state = 49
                self.match(TblCalcFieldParser.NOT)
                self.state = 50
                self.expr(11)
                pass
            elif token in [80]:
                self.state = 51
                self.case_expr()
                pass
            elif token in [76]:
                self.state = 52
                self.if_expr()
                pass
            elif token in [83]:
                self.state = 53
                self.iif_expr()
                pass
            elif token in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54]:
                self.state = 54
                self.function_expr()
                pass
            elif token in [63]:
                self.state = 55
                self.lod_expr()
                pass
            elif token in [65, 88]:
                self.state = 56
                self.field_expr()
                pass
            elif token in [55, 56]:
                self.state = 57
                self.boolean_literal()
                pass
            elif token in [57]:
                self.state = 58
                self.numeric_literal()
                pass
            elif token in [58]:
                self.state = 59
                self.string_literal()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 76
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 74
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = TblCalcFieldParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 62
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 63
                        self.match(TblCalcFieldParser.CARET)
                        self.state = 64
                        self.expr(15)
                        pass

                    elif la_ == 2:
                        localctx = TblCalcFieldParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 65
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 66
                        self.match(TblCalcFieldParser.AIRTHEMATIC_OPERATION)
                        self.state = 67
                        self.expr(14)
                        pass

                    elif la_ == 3:
                        localctx = TblCalcFieldParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 68
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 69
                        self.match(TblCalcFieldParser.LOGICAL_OPERATION)
                        self.state = 70
                        self.expr(13)
                        pass

                    elif la_ == 4:
                        localctx = TblCalcFieldParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 71
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 72
                        _la = self._input.LA(1)
                        if not(((((_la - 73)) & ~0x3f) == 0 and ((1 << (_la - 73)) & 7) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 73
                        self.expr(11)
                        pass

             
                self.state = 78
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Case_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CASE(self):
            return self.getToken(TblCalcFieldParser.CASE, 0)

        def case_term(self):
            return self.getTypedRuleContext(TblCalcFieldParser.Case_termContext,0)


        def ELSE(self):
            return self.getToken(TblCalcFieldParser.ELSE, 0)

        def expr(self):
            return self.getTypedRuleContext(TblCalcFieldParser.ExprContext,0)


        def END(self):
            return self.getToken(TblCalcFieldParser.END, 0)

        def when_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TblCalcFieldParser.When_exprContext)
            else:
                return self.getTypedRuleContext(TblCalcFieldParser.When_exprContext,i)


        def getRuleIndex(self):
            return TblCalcFieldParser.RULE_case_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCase_expr" ):
                return visitor.visitCase_expr(self)
            else:
                return visitor.visitChildren(self)




    def case_expr(self):

        localctx = TblCalcFieldParser.Case_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_case_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(TblCalcFieldParser.CASE)
            self.state = 80
            self.case_term()
            self.state = 82 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 81
                self.when_expr()
                self.state = 84 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==81):
                    break

            self.state = 86
            self.match(TblCalcFieldParser.ELSE)
            self.state = 87
            self.expr(0)
            self.state = 88
            self.match(TblCalcFieldParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Case_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(TblCalcFieldParser.ExprContext,0)


        def getRuleIndex(self):
            return TblCalcFieldParser.RULE_case_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCase_term" ):
                return visitor.visitCase_term(self)
            else:
                return visitor.visitChildren(self)




    def case_term(self):

        localctx = TblCalcFieldParser.Case_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_case_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class When_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHEN(self):
            return self.getToken(TblCalcFieldParser.WHEN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TblCalcFieldParser.ExprContext)
            else:
                return self.getTypedRuleContext(TblCalcFieldParser.ExprContext,i)


        def THEN(self):
            return self.getToken(TblCalcFieldParser.THEN, 0)

        def getRuleIndex(self):
            return TblCalcFieldParser.RULE_when_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhen_expr" ):
                return visitor.visitWhen_expr(self)
            else:
                return visitor.visitChildren(self)




    def when_expr(self):

        localctx = TblCalcFieldParser.When_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_when_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(TblCalcFieldParser.WHEN)
            self.state = 93
            self.expr(0)
            self.state = 94
            self.match(TblCalcFieldParser.THEN)
            self.state = 95
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(TblCalcFieldParser.IF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TblCalcFieldParser.ExprContext)
            else:
                return self.getTypedRuleContext(TblCalcFieldParser.ExprContext,i)


        def THEN(self):
            return self.getToken(TblCalcFieldParser.THEN, 0)

        def END(self):
            return self.getToken(TblCalcFieldParser.END, 0)

        def elseif_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TblCalcFieldParser.Elseif_exprContext)
            else:
                return self.getTypedRuleContext(TblCalcFieldParser.Elseif_exprContext,i)


        def else_expr(self):
            return self.getTypedRuleContext(TblCalcFieldParser.Else_exprContext,0)


        def getRuleIndex(self):
            return TblCalcFieldParser.RULE_if_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_expr" ):
                return visitor.visitIf_expr(self)
            else:
                return visitor.visitChildren(self)




    def if_expr(self):

        localctx = TblCalcFieldParser.If_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_if_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(TblCalcFieldParser.IF)
            self.state = 98
            self.expr(0)
            self.state = 99
            self.match(TblCalcFieldParser.THEN)
            self.state = 100
            self.expr(0)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==79:
                self.state = 101
                self.elseif_expr()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==78:
                self.state = 107
                self.else_expr()


            self.state = 110
            self.match(TblCalcFieldParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Elseif_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSEIF(self):
            return self.getToken(TblCalcFieldParser.ELSEIF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TblCalcFieldParser.ExprContext)
            else:
                return self.getTypedRuleContext(TblCalcFieldParser.ExprContext,i)


        def THEN(self):
            return self.getToken(TblCalcFieldParser.THEN, 0)

        def getRuleIndex(self):
            return TblCalcFieldParser.RULE_elseif_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseif_expr" ):
                return visitor.visitElseif_expr(self)
            else:
                return visitor.visitChildren(self)




    def elseif_expr(self):

        localctx = TblCalcFieldParser.Elseif_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elseif_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(TblCalcFieldParser.ELSEIF)
            self.state = 113
            self.expr(0)
            self.state = 114
            self.match(TblCalcFieldParser.THEN)
            self.state = 115
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(TblCalcFieldParser.ELSE, 0)

        def expr(self):
            return self.getTypedRuleContext(TblCalcFieldParser.ExprContext,0)


        def getRuleIndex(self):
            return TblCalcFieldParser.RULE_else_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_expr" ):
                return visitor.visitElse_expr(self)
            else:
                return visitor.visitChildren(self)




    def else_expr(self):

        localctx = TblCalcFieldParser.Else_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_else_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(TblCalcFieldParser.ELSE)
            self.state = 118
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Iif_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IIF(self):
            return self.getToken(TblCalcFieldParser.IIF, 0)

        def LEFT_PAREN(self):
            return self.getToken(TblCalcFieldParser.LEFT_PAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TblCalcFieldParser.ExprContext)
            else:
                return self.getTypedRuleContext(TblCalcFieldParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TblCalcFieldParser.COMMA)
            else:
                return self.getToken(TblCalcFieldParser.COMMA, i)

        def RIGHT_PAREN(self):
            return self.getToken(TblCalcFieldParser.RIGHT_PAREN, 0)

        def getRuleIndex(self):
            return TblCalcFieldParser.RULE_iif_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIif_expr" ):
                return visitor.visitIif_expr(self)
            else:
                return visitor.visitChildren(self)




    def iif_expr(self):

        localctx = TblCalcFieldParser.Iif_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_iif_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(TblCalcFieldParser.IIF)
            self.state = 121
            self.match(TblCalcFieldParser.LEFT_PAREN)
            self.state = 122
            self.expr(0)
            self.state = 123
            self.match(TblCalcFieldParser.COMMA)
            self.state = 124
            self.expr(0)
            self.state = 125
            self.match(TblCalcFieldParser.COMMA)
            self.state = 126
            self.expr(0)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==68:
                self.state = 127
                self.match(TblCalcFieldParser.COMMA)
                self.state = 128
                self.expr(0)


            self.state = 131
            self.match(TblCalcFieldParser.RIGHT_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_name(self):
            return self.getTypedRuleContext(TblCalcFieldParser.Function_nameContext,0)


        def LEFT_PAREN(self):
            return self.getToken(TblCalcFieldParser.LEFT_PAREN, 0)

        def RIGHT_PAREN(self):
            return self.getToken(TblCalcFieldParser.RIGHT_PAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TblCalcFieldParser.ExprContext)
            else:
                return self.getTypedRuleContext(TblCalcFieldParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TblCalcFieldParser.COMMA)
            else:
                return self.getToken(TblCalcFieldParser.COMMA, i)

        def getRuleIndex(self):
            return TblCalcFieldParser.RULE_function_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_expr" ):
                return visitor.visitFunction_expr(self)
            else:
                return visitor.visitChildren(self)




    def function_expr(self):
